tests/baselines/reference/duplicateIdentifierDifferentModifiers(strict=true).errors.txt
duplicateIdentifierDifferentModifiers.ts(2,15): error TS2687: All declarations of 'x' must have identical modifiers.
duplicateIdentifierDifferentModifiers.ts(2,15): error TS7008: Member 'x' implicitly has an 'any' type.
duplicateIdentifierDifferentModifiers.ts(3,15): error TS2687: All declarations of 'x' must have identical modifiers.
duplicateIdentifierDifferentModifiers.ts(7,10): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
duplicateIdentifierDifferentModifiers.ts(16,11): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
duplicateIdentifierDifferentModifiers.ts(16,11): error TS2687: All declarations of 'y' must have identical modifiers.
duplicateIdentifierDifferentModifiers.ts(20,3): error TS2687: All declarations of 'y' must have identical modifiers.


==== duplicateIdentifierDifferentModifiers.ts (7 errors) ====
    // Not OK
    interface B { x; }
                  ~
!!! error TS2687: All declarations of 'x' must have identical modifiers.
                  ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    interface B { x?; }
                  ~
!!! error TS2687: All declarations of 'x' must have identical modifiers.
    
    // OK
    class A {
      public y: string;
             ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
    }
    
    interface A {
      y: string;
    }
    
    // Not OK
    class C {
      private y: string;
              ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
              ~
!!! error TS2687: All declarations of 'y' must have identical modifiers.
    }
    
    interface C {
      y: string;
      ~
!!! error TS2687: All declarations of 'y' must have identical modifiers.
    }
    